--- a/public/styles/general.css
+++ b/public/styles/general.css
@@ -354,20 +354,6 @@ MARK: Visually hidden
 
 
 /* =====================================
-MARK: Animation section
-===================================== */
-/* General animation styling, full screen */
-.animation-section {
-    height: var(--animation-height, 100vh);
-    width: 100vw;
-    margin: 0;
-    padding: 0;
-    overflow: clip;
-}
-
-
-
-/* =====================================
 MARK: Section components
 ===================================== */
 /* general section styling */
